--- a/references.bib
+++ b/references.bib
@@ -56,3 +56,18 @@
 	url = {http://dx.doi.org/10.1249/MSS.0b013e3181915670},
 	langid = {en}
 }
+
+@article{burd2010,
+	title = {Resistance exercise volume affects myofibrillar protein synthesis and anabolic signalling molecule phosphorylation in young men},
+	author = {{Burd}, {Nicholas A.} and {Holwerda}, {Andrew M.} and {Selby}, {Keegan C.} and {West}, {Daniel W. D.} and {Staples}, {Aaron W.} and {Cain}, {Nathan E.} and {Cashaback}, {Joshua G. A.} and {Potvin}, {James R.} and {Baker}, {Steven K.} and {Phillips}, {Stuart M.}},
+	year = {2010},
+	month = {08},
+	date = {2010-08-13},
+	journal = {The Journal of Physiology},
+	pages = {3119--3130},
+	volume = {588},
+	number = {16},
+	doi = {10.1113/jphysiol.2010.192856},
+	url = {http://dx.doi.org/10.1113/jphysiol.2010.192856},
+	langid = {en}
+}
