--- a/references.bib
+++ b/references.bib
@@ -71,3 +71,92 @@
 	url = {http://dx.doi.org/10.1113/jphysiol.2010.192856},
 	langid = {en}
 }
+
+@article{rønnestad2007,
+	title = {DISSIMILAR EFFECTS OF ONE- AND THREE-SET STRENGTH TRAINING ON STRENGTH AND MUSCLE MASS GAINS IN UPPER AND LOWER BODY IN UNTRAINED SUBJECTS},
+	author = {{RØNNESTAD}, {BENT R.} and {EGELAND}, {WILHELM} and {KVAMME}, {NILS H.} and {REFSNES}, {PER E.} and {KADI}, {FAWZI} and {RAASTAD}, {TRULS}},
+	year = {2007},
+	month = {02},
+	date = {2007-02},
+	journal = {Journal of Strength and Conditioning Research},
+	pages = {157--163},
+	volume = {21},
+	number = {1},
+	doi = {10.1519/00124278-200702000-00028},
+	url = {http://dx.doi.org/10.1519/00124278-200702000-00028},
+	langid = {en}
+}
+
+@article{starkey1996,
+	title = {Effect of resistance training volume on strength and muscle thickness},
+	author = {{STARKEY}, {DAVID B.} and {POLLOCK}, {MICHAEL L.} and {ISHIDA}, {YOSHI} and {WELSCH}, {MICHAEL A.} and {BRECHUE}, {WILLIAM F.} and {GRAVES}, {JAMES E.} and {FEIGENBAUM}, {MATTHEW S.}},
+	year = {1996},
+	month = {10},
+	date = {1996-10},
+	journal = {Medicine & Science in Sports & Exercise},
+	pages = {1311--1320},
+	volume = {28},
+	number = {10},
+	doi = {10.1097/00005768-199610000-00016},
+	url = {http://dx.doi.org/10.1097/00005768-199610000-00016},
+	langid = {en}
+}
+
+@article{radaelli2015,
+	title = {Dose-Response of 1, 3, and 5 Sets of Resistance Exercise on Strength, Local Muscular Endurance, and Hypertrophy},
+	author = {{Radaelli}, {Regis} and {Fleck}, {Steven J.} and {Leite}, {Thalita} and {Leite}, {Richard D.} and {Pinto}, {Ronei S.} and {Fernandes}, {Liliam} and {Simão}, {Roberto}},
+	year = {2015},
+	month = {05},
+	date = {2015-05},
+	journal = {Journal of Strength and Conditioning Research},
+	pages = {1349--1358},
+	volume = {29},
+	number = {5},
+	doi = {10.1519/jsc.0000000000000758},
+	url = {http://dx.doi.org/10.1519/JSC.0000000000000758},
+	langid = {en}
+}
+
+@article{bottaro2011,
+	title = {Resistance training for strength and muscle thickness: Effect of number of sets and muscle group trained},
+	author = {{Bottaro}, {M.} and {Veloso}, {J.} and {Wagner}, {D.} and {Gentil}, {P.}},
+	year = {2011},
+	month = {11},
+	date = {2011-11},
+	journal = {Science & Sports},
+	pages = {259--264},
+	volume = {26},
+	number = {5},
+	doi = {10.1016/j.scispo.2010.09.009},
+	url = {http://dx.doi.org/10.1016/j.scispo.2010.09.009},
+	langid = {en}
+}
+
+@article{galvã£o2005,
+	title = {Resistance Exercise Dosage in Older Adults: Single- Versus Multiset Effects on Physical Performance and Body Composition},
+	author = {{GalvÃ£o}, {Daniel A.} and {Taaffe}, {Dennis R.}},
+	year = {2005},
+	month = {12},
+	date = {2005-12},
+	journal = {Journal of the American Geriatrics Society},
+	pages = {2090--2097},
+	volume = {53},
+	number = {12},
+	doi = {10.1111/j.1532-5415.2005.00494.x},
+	url = {http://dx.doi.org/10.1111/j.1532-5415.2005.00494.x},
+	langid = {en}
+}
+
+@article{mcbride2003,
+	title = {Effect of resistance exercise volume and complexity on EMG, strength, and regional body composition},
+	author = {{McBride}, {Jeffrey M.} and {Blaak}, {John B.} and {Triplett-McBride}, {Travis}},
+	year = {2003},
+	month = {11},
+	date = {2003-11-01},
+	journal = {European Journal of Applied Physiology},
+	pages = {626--632},
+	volume = {90},
+	number = {5-6},
+	doi = {10.1007/s00421-003-0930-3},
+	url = {http://dx.doi.org/10.1007/s00421-003-0930-3}
+}
