--- a/references.bib
+++ b/references.bib
@@ -132,7 +132,7 @@
 	langid = {en}
 }
 
-@article{galvã£o2005,
+@article{galva£o2005, 
 	title = {Resistance Exercise Dosage in Older Adults: Single- Versus Multiset Effects on Physical Performance and Body Composition},
 	author = {{GalvÃ£o}, {Daniel A.} and {Taaffe}, {Dennis R.}},
 	year = {2005},
