Endring i sitering av galvao

--- a/references.bib
+++ b/references.bib
@@ -132,9 +132,9 @@
 	langid = {en}
 }
 
-@article{galvÃ£o2005, 
+@article{galavo2005, 
 	title = {Resistance Exercise Dosage in Older Adults: Single- Versus Multiset Effects on Physical Performance and Body Composition},
-	author = {{GalvÃ£o}, {Daniel A.} and {Taaffe}, {Dennis R.}},
+	author = {{Galvao}, {Daniel A.} and {Taaffe}, {Dennis R.}},
 	year = {2005},
 	month = {12},
 	date = {2005-12},
